# localrag

./: LICENSE  README.md  eval.sh  main.py  pyproject.toml  run.sh  streamlit_app.py
app/: app.py  db.py  utils.py
app/agent/: graph.py  nodes.py  prompts.py
app/api/: __init__.py  a2a_api.py  document.py
app/config/: config.py
app/models/: api.py
evaluation/: a2a_client.py  eval.py
scripts/: langchain_milvus.patch
