[project]
name = "localrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.10",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.1",
    "greenlet>=3.2.4",
    "langchain>=1.0.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langchain-milvus>=0.2.2",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "pymilvus[milvus-lite]>=2.6.2",
    "pypdf>=6.1.3",
    "python-multipart>=0.0.20",
    "ragas>=0.3.8",
    "redisvl>=0.10.0",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "unstructured[md]>=0.18.15",
    "uvicorn>=0.38.0",
]
